Themes Changed color scheme Fixed Widget area jumping around before and after pagedata is fetched Redirect to /index when navigating to root

--- a/src/themes/default/theme.scss
+++ b/src/themes/default/theme.scss
@@ -1,12 +1,15 @@
+$primary-color: #003788;
+$secondary-color: #000;
+
 body{
     width: 100%;
     height: 100%;
-    background: linear-gradient(#e3e3e3 30%, rgb(6, 69, 129));
+    background: rgb(48, 48, 48);
     background-attachment: fixed;
 }
 header{
     
-    background: #000000 url("header.png") no-repeat right;
+    background: $primary-color;
     background-size: contain;
     color: white;
     height: 200px;
@@ -50,11 +53,11 @@ header{
 }
 
 .navbar{
-    background: linear-gradient(#959595, #565656);
+    background: white;
     box-shadow: 0px 0px 2px rgb(71, 71, 71);
     
     .nav-link{
-        color:white;
+        color:$secondary-color;
         font-weight: 700;
         border-right: 1px solid rgb(66, 66, 66);
         border-radius: 0px;    
@@ -79,33 +82,64 @@ header{
 }
 
 .widget-area{
+    margin-top:1em;
     ul{
         list-style: none;
         padding-left: 0px;
+    }
+
+    li{
+        
+        background: rgba(212, 212, 212, 0.082);
+        margin-top:10px;
+        padding: 2px;
+        font-weight: bold;
+        line-height: 20px;
+    
+        a{
+            color:darkblue;
+        }
+    
+    }
+    h1{
+        color:white;
+        background: $primary-color;
+        width: 100%;
+        padding:10px;
+        font-size: 150%;
+        box-shadow: 1px 1px 5px darkblue;
+        text-align: center;
+
     }
 }
 
 footer{
     box-shadow: 0px -1px 2px rgba(7, 7, 7, 0.418);    
-    background: #efefef;
+    background: $primary-color;
+    color:white;
     min-height: 20vh;
     padding: 10px;
     width: 100%;
     h3:after{
         content: "";
        width: 100%;
-       height: 1px;
-       background: linear-gradient(to right,black,rgb(122, 122, 122)); 
+       height: 5px;
+       background: black; 
        display: block;
     }     
 
     @media screen and (min-width: 768px) {
         h3:after{
+            margin-top:10px;
             width: 50%;
         }       
     }
   
-    .container{
-        border: 1px solid #b4b4b4;
-    }
+  
+}
+
+.container{
+
+    box-shadow: 0 0 25px 10px rgb(19, 19, 19);
+
 }
